testsuite/tests/typecheck/should_compile/T11505Bar.hs
module T11505Bar where

import {-# SOURCE #-} T11505Foo
