testsuite/tests/typecheck/should_fail/T16275A.hs
module T16275A where

import {-# SOURCE #-} T16275B
